Fix wbw translation on mobile being reveresed and also issue with page boundaries (#335)

--- a/src/components/QuranReader/ReadingView/Page.module.scss
+++ b/src/components/QuranReader/ReadingView/Page.module.scss
@@ -4,6 +4,7 @@
 .container {
   border-bottom: 1px var(--color-borders-hairline) solid;
   margin-bottom: var(--spacing-xsmall);
+  max-width: 100%;
 }
 
 .mobileCenterText {
